Updates version number. Adds more to min-height. Used to prevent content jumping once game is over.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ body {
 #play_again_button_container {
     display: none;
     margin-top: 10px;
-    min-height: 40px;
+    min-height: 50px;
 }
 
 /* High Score */
